--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -7,6 +7,8 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+    - text: "Datasets"
+      href: datasets.html
     - text: "About"
       href: about.html
     - text: "License"
