--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ analysis/*_cache
 /lectures/01_z5_data_sources/
 /administrative
 lectures/17_central_limit_theorem/cache/
+lectures/16_z1_variance_of_sum/
